tests/parse_print/random_perturb/set01/delete-06/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-06/delete-06.essence line 1, column 10:
language name has to be Essence, but given: Essece
    line 1, column 10
    language Essece 1.3
          ^^^^^^^